--- a/front-end/src/scenes/Landing/components/Testimonials/styles.css
+++ b/front-end/src/scenes/Landing/components/Testimonials/styles.css
@@ -20,6 +20,7 @@
   justify-content: space-between;
   align-items: center;
   position: absolute;
+  z-index: 1;
 }
 
 .navigation i {
